--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,19 @@ DerivedData/
 /*.gcno
 
 .DS_Store
+
+# fastlane specific
+**/fastlane/report.xml
+
+# deliver temporary files
+**/fastlane/Preview.html
+
+# snapshot generated screenshots
+**/fastlane/screenshots
+
+# scan temporary files
+**/fastlane/test_output
+
+*.ipa
+*.app.dSYM.zip
+xcodebuild.json
